# rusted-chip8

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  config.txt
ch8/: README.txt
src/: aud.rs  conf.rs  cpu.rs  gfx.rs  inst.rs  kbrd.rs  main.rs  mem.rs  sdl.rs  util.rs
src/emu/: audio.rs  config.rs  core_emu.rs  input.rs  logic.rs  memory.rs  mod.rs
src/gfx/: mod.rs
src/math/: mod.rs
src/util/: mod.rs
