[package]
name = "rusted-chip8"
version = "1.0.0"
edition = "2021"
authors = ["Rodrigo M. Cucick <r_monfredini@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
